--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@any-reader/core",
   "type": "module",
-  "version": "0.0.1-alpha.2",
+  "version": "0.0.1-alpha.3",
   "packageManager": "pnpm@8.6.5",
   "description": "",
   "license": "MIT",
@@ -14,9 +14,7 @@
   "bugs": {
     "url": "https://github.com/aooiuu/any-reader/issues"
   },
-  "keywords": [
-    "gio"
-  ],
+  "keywords": [],
   "sideEffects": false,
   "exports": {
     ".": {
@@ -67,6 +65,7 @@
     "cheerio": "1.0.0-rc.12",
     "compressing": "^1.9.0",
     "jsonpath-plus": "^7.2.0",
-    "pako": "^2.1.0"
+    "pako": "^2.1.0",
+    "urlencode": "^2.0.0"
   }
 }
