--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@any-reader/core",
   "type": "module",
-  "version": "0.0.1-alpha.4",
+  "version": "0.0.1-alpha.5",
   "packageManager": "pnpm@8.6.5",
   "description": "",
   "license": "MIT",
@@ -48,6 +48,7 @@
     "@rollup/plugin-node-resolve": "^15.1.0",
     "@types/jest": "^29.5.11",
     "@types/node": "^18.16.19",
+    "@types/xmldom": "^0.1.34",
     "eslint": "^8.44.0",
     "esno": "^0.16.3",
     "jest": "^29.7.0",
@@ -66,6 +67,8 @@
     "compressing": "^1.9.0",
     "jsonpath-plus": "^7.2.0",
     "pako": "^2.1.0",
-    "urlencode": "^2.0.0"
+    "urlencode": "^2.0.0",
+    "xmldom": "^0.6.0",
+    "xpath.js": "^1.1.0"
   }
 }
