--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@any-reader/core",
+  "name": "@any-reader/monorepo",
   "type": "module",
   "version": "0.1.0-alpha.3",
   "packageManager": "pnpm@8.6.5",
@@ -16,13 +16,6 @@
   },
   "keywords": [],
   "sideEffects": false,
-  "exports": {
-    ".": {
-      "types": "./index.d.ts",
-      "require": "./dist/index.cjs",
-      "import": "./dist/index.mjs"
-    }
-  },
   "main": "dist/index.cjs",
   "module": "dist/index.mjs",
   "types": "index.d.ts",
@@ -31,45 +24,17 @@
     "*.d.ts"
   ],
   "scripts": {
-    "build": "rollup -c",
-    "dev": "rollup -c --watch",
-    "lint": "eslint .",
-    "prepublishOnly": "npm run build",
-    "start": "esno src/start.ts",
-    "typecheck": "tsc --noEmit",
+    "run:core": "npm -C packages/core run start",
+    "build:core": "npm -C packages/core run build",
+    "run:web": "npm -C packages/web run dev",
     "test": "jest",
-    "coveralls": "jest --coverage"
+    "coveralls": "jest --coverage",
+    "prepare": "husky install"
+  },
+  "lint-staged": {
+    "*.{vue,js,ts}": "eslint --fix"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^0.39.6",
-    "@rollup/plugin-alias": "^5.0.0",
-    "@rollup/plugin-commonjs": "^25.0.2",
-    "@rollup/plugin-json": "^6.0.0",
-    "@rollup/plugin-node-resolve": "^15.1.0",
-    "@types/jest": "^29.5.11",
-    "@types/node": "^18.16.19",
-    "@types/xmldom": "^0.1.34",
-    "eslint": "^8.44.0",
-    "esno": "^0.16.3",
-    "jest": "^29.7.0",
-    "rollup": "^3.26.0",
-    "rollup-plugin-dts": "^5.3.0",
-    "rollup-plugin-esbuild": "^5.0.0",
-    "ts-jest": "^29.1.1",
-    "typescript": "^5.1.6",
-    "vite": "^4.3.9",
-    "vitest": "^0.32.2"
-  },
-  "dependencies": {
-    "axios": "^1.5.1",
-    "base64-js": "^1.5.1",
-    "cheerio": "1.0.0-rc.12",
-    "compressing": "^1.9.0",
-    "jsonpath-plus": "^7.2.0",
-    "pako": "^2.1.0",
-    "puppeteer": "^21.7.0",
-    "urlencode": "^2.0.0",
-    "xmldom": "^0.6.0",
-    "xpath.js": "^1.1.0"
+    "husky": "^8.0.0"
   }
 }
