--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "run:core": "npm -C packages/core run start",
     "build:core": "npm -C packages/core run build",
     "run:web": "npm -C packages/web run dev",
+    "build:web-w": "npm -C packages/web run build:w",
     "test": "jest",
     "coveralls": "jest --coverage",
     "prepare": "husky install"
