--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "build:core": "npm -C packages/core run build",
     "run:web": "npm -C packages/web run dev",
     "build:web-w": "npm -C packages/web run build:w",
+    "run:vsc": "npm-run-all build:core build:web-w",
     "test": "jest",
     "coveralls": "jest --coverage",
     "prepare": "husky install"
@@ -36,6 +37,7 @@
     "*.{vue,js,ts}": "eslint --fix"
   },
   "devDependencies": {
+    "@types/uuid": "^9.0.8",
     "husky": "^8.0.0"
   }
 }
