--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "run:web": "npm -C packages/web run dev",
     "build:web-w": "npm -C packages/web run build:w",
     "run:vsc": "npm-run-all build:core build:web-w",
+    "docs": "npm -C docs run docs:dev",
+    "build:docs": "npm -C docs run docs:build",
     "test": "jest",
     "coveralls": "jest --coverage",
     "prepare": "husky install"
