feat: 添加发现页功能

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@any-reader/core",
-  "version": "0.1.0-alpha.5",
+  "version": "0.2.0",
   "description": "",
   "type": "module",
   "main": "index.js",
