--- a/packages/vscode/tsconfig.json
+++ b/packages/vscode/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "forceConsistentCasingInFileNames": true,
+    "esModuleInterop": true,
     "module": "commonjs",
     "target": "ES2020",
     "lib": ["ES2020"],
