--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -19,6 +19,7 @@
     "@unocss/reset": "^0.51.13",
     "axios": "^1.3.4",
     "dplayer": "^1.27.1",
+    "easy-post-message": "^0.1.0",
     "hls.js": "^1.5.3",
     "uuid": "^9.0.1",
     "vue": "^3.4.15",
