--- a/packages/vscode/.vscode/settings.json
+++ b/packages/vscode/.vscode/settings.json
@@ -13,5 +13,6 @@
 
   "[typescript]": {
     "editor.defaultFormatter": "dbaeumer.vscode-eslint"
-  }
+  },
+  "typescript.tsdk": "node_modules\\typescript\\lib"
 }
