--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -22,6 +22,7 @@
     "easy-post-message": "^0.1.0",
     "hls.js": "^1.5.3",
     "monaco-editor": "0.47.0",
+    "p-limit": "^5.0.0",
     "pinia": "^2.1.7",
     "uuid": "^9.0.1",
     "vue": "^3.4.15",
