--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "@any-reader/core": "workspace:^",
     "encoding-japanese": "^2.1.0",
+    "epub": "^1.2.1",
     "fs-extra": "^11.1.1",
     "iconv-lite": "^0.6.3",
     "uuid": "^9.0.1"
