feat: 添加章节切换菜单 (#7)

--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@any-reader/monorepo",
   "type": "module",
-  "version": "0.1.0-alpha.3",
+  "version": "1.0.0",
   "packageManager": "pnpm@8.6.5",
   "description": "",
-  "license": "MIT",
+  "license": "GPL3",
   "author": "aooiuu",
   "homepage": "https://github.com/aooiuu/any-reader#readme",
   "repository": {
@@ -28,12 +28,13 @@
     "build:core": "npm -C packages/core run build",
     "build:shared": "npm -C packages/shared run build",
     "run:web": "npm -C packages/web run dev",
+    "build:web": "npm -C packages/web run build",
     "build:web-w": "npm -C packages/web run build:w",
     "run:vsc": "npm-run-all build:core build:web-w",
     "docs": "npm -C docs run docs:dev",
     "build:docs": "npm -C docs run docs:build",
     "server": "npm -C packages/server run dev",
-    "build": "npm-run-all build:core build:shared",
+    "build": "npm-run-all build:core build:shared build:web",
     "run:server": "run-p server run:web",
     "test": "jest",
     "coveralls": "jest --coverage",
