--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -17,6 +17,8 @@
   "dependencies": {
     "@arco-design/web-vue": "^2.54.4",
     "@unocss/reset": "^0.51.13",
+    "@vscode/codicons": "^0.0.36",
+    "@vueuse/core": "^10.9.0",
     "axios": "^1.3.4",
     "dplayer": "^1.27.1",
     "easy-post-message": "^0.1.0",
