--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "run:core": "npm -C packages/core run start",
     "build:core": "npm -C packages/core run build",
     "build:shared": "npm -C packages/shared run build",
-    "run:web": "npm -C packages/web run dev",
     "build:web": "npm -C packages/web run build",
     "build:web-w": "npm -C packages/web run build:w",
     "run:vsc": "npm-run-all build:core build:web-w",
@@ -38,7 +37,10 @@
     "run:server": "run-p server run:web",
     "test": "jest",
     "coveralls": "jest --coverage",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "web:server": "npm -C packages/web run dev",
+    "web:build-b": "npm -C packages/web run build:b",
+    "web:dev": "npm-run-all build:core build:shared --parallel web:server server"
   },
   "lint-staged": {
     "*.{vue,js,ts}": "eslint --fix"
