--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -7,6 +7,7 @@
     "dev": "cross-env VITE_APP_PLATFORM=browser vite",
     "build:w": "vite build --watch",
     "build": "run-p type-check \"build-only {@}\" --",
+    "build:b": "cross-env VITE_APP_PLATFORM=browser run-p type-check \"build-only {@}\" --",
     "preview": "vite preview",
     "test:unit": "vitest",
     "build-only": "vite build",
@@ -18,12 +19,14 @@
     "@arco-design/web-vue": "^2.54.4",
     "@unocss/reset": "^0.51.13",
     "@vscode/codicons": "^0.0.36",
+    "@vscode/webview-ui-toolkit": "^1.4.0",
     "@vueuse/core": "^10.9.0",
     "axios": "^1.3.4",
     "dplayer": "^1.27.1",
     "easy-post-message": "^0.1.0",
     "hls.js": "^1.5.3",
     "monaco-editor": "0.47.0",
+    "nprogress": "^0.2.0",
     "p-limit": "^5.0.0",
     "pinia": "^2.1.7",
     "uuid": "^9.0.1",
@@ -35,6 +38,7 @@
     "@tsconfig/node20": "^20.1.2",
     "@types/jsdom": "^21.1.6",
     "@types/node": "^20.11.16",
+    "@types/nprogress": "^0.2.3",
     "@vitejs/plugin-vue": "^5.0.3",
     "@vitejs/plugin-vue-jsx": "^3.1.0",
     "@vue/eslint-config-prettier": "^8.0.0",
