--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -2,7 +2,6 @@
   "name": "any-reader-web",
   "version": "0.5.7",
   "private": true,
-  "type": "module",
   "scripts": {
     "dev": "cross-env VITE_APP_PLATFORM=browser vite",
     "build:w": "vite build --watch",
@@ -13,10 +12,14 @@
     "build-only": "vite build",
     "type-check": "vue-tsc --build --force",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
-    "format": "prettier --write src/"
+    "format": "prettier --write src/",
+    "electron:dev": "cross-env VITE_APP_PLATFORM=electron vite",
+    "vscode:dev": "cross-env VITE_APP_PLATFORM=vscode vite"
   },
   "main": "dist-electron/main.js",
   "dependencies": {
+    "@any-reader/core": "workspace:^",
+    "@any-reader/shared": "workspace:^",
     "@arco-design/web-vue": "^2.54.4",
     "@unocss/reset": "^0.51.13",
     "@vscode/codicons": "^0.0.36",
@@ -45,6 +48,7 @@
     "@vue/eslint-config-prettier": "^8.0.0",
     "@vue/eslint-config-typescript": "^12.0.0",
     "@vue/tsconfig": "^0.5.1",
+    "bufferutil": "^4.0.8",
     "chalk": "^5.2.0",
     "cross-env": "^7.0.3",
     "electron": "^30.0.6",
@@ -58,9 +62,11 @@
     "typescript": "~5.3.3",
     "unocss": "^0.58.4",
     "unplugin-auto-import": "^0.16.4",
+    "utf-8-validate": "^6.0.4",
     "vite": "^5.0.11",
     "vite-plugin-electron": "^0.28.7",
     "vite-plugin-mock": "^3.0.1",
-    "vue-tsc": "^1.8.27"
+    "vue-tsc": "^1.8.27",
+    "ws": "^8.17.0"
   }
 }
