feat(desktop): 添加视频播放页

--- a/.npmrc
+++ b/.npmrc
@@ -1,4 +1,9 @@
 ignore-workspace-root-check=true
-shamefully-hoist=true
 strict-peer-dependencies=false
 auto-install-peers=true
+
+# https://github.com/electron-userland/electron-builder
+node-linker=hoisted
+public-hoist-pattern=*
+shamefully-hoist=true
+
