--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "cross-env VITE_APP_PLATFORM=browser vite",
     "build:w": "vite build --watch",
-    "build": "run-p type-check \"build-only {@}\" --",
+    "build": "cross-env VITE_APP_PLATFORM=vscode run-p type-check \"build-only {@}\" --",
     "build:b": "cross-env VITE_APP_PLATFORM=browser run-p type-check \"build-only {@}\" --",
     "preview": "vite preview",
     "test:unit": "vitest",
@@ -15,6 +15,7 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
     "format": "prettier --write src/"
   },
+  "main": "dist-electron/main.js",
   "dependencies": {
     "@arco-design/web-vue": "^2.54.4",
     "@unocss/reset": "^0.51.13",
@@ -46,6 +47,7 @@
     "@vue/tsconfig": "^0.5.1",
     "chalk": "^5.2.0",
     "cross-env": "^7.0.3",
+    "electron": "^30.0.6",
     "eslint": "^8.49.0",
     "eslint-plugin-vue": "^9.17.0",
     "mockjs": "^1.1.0",
@@ -57,6 +59,7 @@
     "unocss": "^0.58.4",
     "unplugin-auto-import": "^0.16.4",
     "vite": "^5.0.11",
+    "vite-plugin-electron": "^0.28.7",
     "vite-plugin-mock": "^3.0.1",
     "vue-tsc": "^1.8.27"
   }
