--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -29,8 +29,8 @@
   "license": "GPL3",
   "dependencies": {
     "@any-reader/core": "workspace:^",
+    "@any-reader/epub": "workspace:^",
     "encoding-japanese": "^2.1.0",
-    "epub": "^1.2.1",
     "fs-extra": "^11.1.1",
     "iconv-lite": "^0.6.3",
     "uuid": "^9.0.1"
