--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -1,6 +1,6 @@
 {
   "name": "any-reader-web",
-  "version": "0.5.7",
+  "version": "1.0.0-dev.1",
   "private": true,
   "scripts": {
     "dev": "cross-env VITE_APP_PLATFORM=browser vite",
@@ -24,7 +24,7 @@
   "dependencies": {
     "@any-reader/core": "workspace:^",
     "@any-reader/shared": "workspace:^",
-    "@arco-design/web-vue": "^2.54.4",
+    "@arco-design/web-vue": "^2.55.2",
     "@unocss/reset": "^0.51.13",
     "@vscode/codicons": "^0.0.36",
     "@vscode/webview-ui-toolkit": "^1.4.0",
@@ -33,6 +33,7 @@
     "dplayer": "^1.27.1",
     "easy-post-message": "^0.1.0",
     "hls.js": "^1.5.3",
+    "lodash-es": "^4.17.21",
     "monaco-editor": "0.47.0",
     "nprogress": "^0.2.0",
     "p-limit": "^5.0.0",
@@ -45,6 +46,7 @@
     "@rushstack/eslint-patch": "^1.3.3",
     "@tsconfig/node20": "^20.1.2",
     "@types/jsdom": "^21.1.6",
+    "@types/lodash-es": "^4.17.12",
     "@types/node": "^20.11.16",
     "@types/nprogress": "^0.2.3",
     "@vitejs/plugin-vue": "^5.0.3",
@@ -52,10 +54,9 @@
     "@vue/eslint-config-prettier": "^8.0.0",
     "@vue/eslint-config-typescript": "^12.0.0",
     "@vue/tsconfig": "^0.5.1",
-    "bufferutil": "^4.0.8",
     "chalk": "^5.2.0",
     "cross-env": "^7.0.3",
-    "electron": "^30.0.6",
+    "electron": "30.0.6",
     "electron-builder": "^24.13.3",
     "eslint": "^8.49.0",
     "eslint-plugin-vue": "^9.17.0",
@@ -67,11 +68,9 @@
     "typescript": "~5.3.3",
     "unocss": "^0.58.4",
     "unplugin-auto-import": "^0.16.4",
-    "utf-8-validate": "^6.0.4",
     "vite": "^5.0.11",
     "vite-plugin-electron": "^0.28.7",
     "vite-plugin-mock": "^3.0.1",
-    "vue-tsc": "^1.8.27",
-    "ws": "^8.17.0"
+    "vue-tsc": "^1.8.27"
   }
 }
