chore: 添加构建任务

--- a/packages/web/electron-builder.json5
+++ b/packages/web/electron-builder.json5
@@ -7,7 +7,7 @@
   "artifactName": "AnyReader_${version}.${ext}",
   "asar": false,
   "directories": {
-    "output": "dist/electron/${version}"
+    "output": "dist/electron"
   },
   "files": [
     "dist"
