--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -33,6 +33,7 @@
     "chardet": "^2.0.0",
     "fs-extra": "^11.1.1",
     "iconv-lite": "^0.6.3",
+    "lowdb": "^7.0.1",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
