--- a/.github/workflows/electron.yml
+++ b/.github/workflows/electron.yml
@@ -59,5 +59,6 @@ jobs:
         if: startsWith(github.ref, 'refs/tags/')
         with:
           files: "packages/web/dist/electron/**"
+          # prerelease: true
         env:
           GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
