--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "prepare": "husky install",
     "web:server": "npm -C packages/web run dev",
     "web:build-b": "npm -C packages/web run build:b",
-    "web:dev": "npm-run-all build:core build:shared --parallel web:server server",
+    "web:dev": "npm-run-all --parallel web:server server",
     "electron:server": "npm -C packages/web run electron:dev",
     "electron:build": "npm -C packages/web run electron:build",
     "vscode:server": "npm -C packages/web run vscode:dev",
@@ -52,6 +52,7 @@
   "devDependencies": {
     "@types/mime": "3.0.4",
     "@types/uuid": "^9.0.8",
-    "husky": "^8.0.0"
+    "husky": "^8.0.0",
+    "npm-run-all": "^4.1.5"
   }
 }
