--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -33,6 +33,7 @@
     "chardet": "^2.0.0",
     "fs-extra": "^11.1.1",
     "iconv-lite": "^0.6.3",
+    "lodash-es": "^4.17.21",
     "lowdb": "^7.0.1",
     "uuid": "^9.0.1"
   },
@@ -45,6 +46,7 @@
     "@types/encoding-japanese": "^2.0.5",
     "@types/koa-router": "^7.4.8",
     "@types/koa-static": "^4.0.4",
+    "@types/lodash-es": "^4.17.12",
     "@types/node": "^18.16.19",
     "esno": "^0.16.3",
     "rollup": "^3.26.0",
