--- a/packages/vscode/package.json
+++ b/packages/vscode/package.json
@@ -1,9 +1,9 @@
 {
   "name": "any-reader",
   "displayName": "any-reader",
-  "description": "自定义规则多站点聚合搜索阅读小说、漫画。包含JS规则解析库和VSCode插件。支持本地小说 TXT、EPUB",
+  "description": "摸鱼,自定义规则多站点聚合搜索阅读小说、漫画。包含JS规则解析库和VSCode插件。支持本地小说 TXT、EPUB",
   "icon": "resources/icon.png",
-  "version": "1.3.0",
+  "version": "1.3.1",
   "publisher": "aooiu",
   "qna": "https://github.com/aooiuu/any-reader/issues",
   "bugs": {
