--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -2,11 +2,19 @@
   "name": "@any-reader/server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "type": "module",
+  "exports": {
+    ".": {
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.cjs"
+    }
+  },
+  "main": "./dist/index.cjs",
+  "types": "./dist/index.d.ts",
+  "files": ["dist"],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "esno watch src/index.ts"
+    "dev": "esno watch src/run.ts"
   },
   "keywords": [],
   "author": "",
