feat(cli): 支持命令行

--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -13,6 +13,7 @@
   "types": "./dist/index.d.ts",
   "files": ["dist"],
   "scripts": {
+    "build": "unbuild",
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "esno watch src/run.ts"
   },
