--- a/package.json
+++ b/package.json
@@ -45,9 +45,10 @@
     "electron:build": "npm -C packages/web run electron:build",
     "vscode:server": "npm -C packages/web run vscode:dev",
     "vscode:dev": "npm-run-all build:core build:shared --parallel vscode:server server",
+    "server:build": "npm -C packages/server run build",
     "cli:build-tpl": "npm -C packages/web run cli:build",
     "cli:build-js": "npm -C packages/cli run build",
-    "cli:build": "npm-run-all cli:build-tpl cli:build-js"
+    "cli:build": "npm-run-all server:build cli:build-tpl cli:build-js"
   },
   "lint-staged": {
     "*.{vue,js,ts}": "eslint --fix"
