--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "@any-reader/core": "workspace:^",
     "@any-reader/epub": "workspace:^",
+    "axios": "^1.7.2",
     "chardet": "^2.0.0",
     "fs-extra": "^11.1.1",
     "iconv-lite": "^0.6.3",
