--- a/packages/vscode/package.json
+++ b/packages/vscode/package.json
@@ -3,7 +3,7 @@
   "displayName": "any-reader",
   "description": "摸鱼,自定义规则多站点聚合搜索阅读小说、漫画。包含JS规则解析库和VSCode插件。支持本地小说 TXT、EPUB",
   "icon": "resources/icon.png",
-  "version": "1.3.2",
+  "version": "1.3.3",
   "publisher": "aooiu",
   "qna": "https://github.com/aooiuu/any-reader/issues",
   "bugs": {
@@ -30,7 +30,16 @@
   ],
   "activationEvents": [
     "onView:any-reader",
-    "onWebviewPanel:any-reader"
+    "onWebviewPanel:any-reader",
+    "onCommand:any-reader.getBookSource",
+    "onCommand:any-reader.searchBook",
+    "onCommand:any-reader.searchBookByRule",
+    "onCommand:any-reader.discover",
+    "onCommand:any-reader.home",
+    "onCommand:any-reader.gamePlay",
+    "onCommand:any-reader.star",
+    "onCommand:any-reader.unstar",
+    "onCommand:any-reader.openLocalBookDir"
   ],
   "main": "./dist/extension.js",
   "scripts": {
