chore: deploy vsx

--- a/package.json
+++ b/package.json
@@ -25,15 +25,15 @@
   ],
   "scripts": {
     "run:core": "npm -C packages/core run start",
-    "build:core": "npm -C packages/core run build",
-    "build:shared": "npm -C packages/shared run build",
+    "core:build": "npm -C packages/core run build",
+    "shared:build": "npm -C packages/shared run build",
+    "build": "npm-run-all core:build shared:build build:web",
     "build:web": "npm -C packages/web run build",
     "build:web-w": "npm -C packages/web run build:w",
-    "run:vsc": "npm-run-all build:core build:web-w",
+    "run:vsc": "npm-run-all core:build build:web-w",
     "docs": "npm -C docs run docs:dev",
     "build:docs": "npm -C docs run docs:build",
     "server": "npm -C packages/server run dev",
-    "build": "npm-run-all build:core build:shared build:web",
     "run:server": "run-p server run:web",
     "test": "jest",
     "coveralls": "jest --coverage",
@@ -44,7 +44,8 @@
     "electron:server": "npm -C packages/web run electron:dev",
     "electron:build": "npm -C packages/web run electron:build",
     "vscode:server": "npm -C packages/web run vscode:dev",
-    "vscode:dev": "npm-run-all build:core build:shared --parallel vscode:server server",
+    "vscode:dev": "npm-run-all core:build shared:build --parallel vscode:server server",
+    "vscode:build-tpl": "npm -C packages/web run vscode:build",
     "vscode:build": "npm -C packages/vscode run build",
     "server:build": "npm -C packages/server run build",
     "cli:build-tpl": "npm -C packages/web run cli:build",
