--- a/packages/vscode/package.json
+++ b/packages/vscode/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "any-reader",
+  "name": "@any-reader/vscode",
   "displayName": "any-reader",
   "description": "摸鱼,自定义规则多站点聚合搜索阅读小说、漫画。包含JS规则解析库和VSCode插件。支持本地小说 TXT、EPUB",
   "icon": "resources/icon.png",
-  "version": "1.3.3",
+  "version": "1.3.5",
   "publisher": "aooiu",
   "qna": "https://github.com/aooiuu/any-reader/issues",
   "bugs": {
@@ -43,14 +43,16 @@
   ],
   "main": "./dist/extension.js",
   "scripts": {
-    "build": "vsce package --no-dependencies",
-    "vscode:prepublish": "yarn run package",
+    "build:rename": "esno ./scripts/publish.cjs",
+    "build:vsce": "vsce package --no-dependencies",
+    "build": "npm-run-all build:rename build:vsce",
+    "vscode:prepublish": "pnpm run package",
     "compile": "webpack",
     "watch": "webpack --watch",
     "package": "webpack --mode production --devtool hidden-source-map",
     "compile-tests": "tsc -p . --outDir out",
     "watch-tests": "tsc -p . -w --outDir out",
-    "pretest": "yarn run compile-tests && yarn run compile && yarn run lint",
+    "pretest": "pnpm run compile-tests && pnpm run compile && pnpm run lint",
     "lint": "eslint src --ext ts",
     "test": "node ./out/test/runTest.js"
   },
@@ -208,6 +210,8 @@
     }
   },
   "devDependencies": {
+    "@any-reader/core": "workspace:*",
+    "@any-reader/shared": "workspace:*",
     "@types/fs-extra": "^11.0.4",
     "@types/glob": "^7.2.0",
     "@types/mocha": "^9.1.1",
@@ -216,24 +220,23 @@
     "@typescript-eslint/eslint-plugin": "^5.30.0",
     "@typescript-eslint/parser": "^5.30.0",
     "@vscode/test-electron": "^2.1.5",
+    "bufferutil": "^4.0.8",
+    "easy-post-message": "^0.1.0",
     "eslint": "^8.18.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "execa": "^8.0.1",
+    "explorer-opener": "^1.0.1",
+    "fs-extra": "^11.1.1",
     "glob": "^8.0.3",
     "mocha": "^10.0.0",
     "prettier": "^2.7.1",
+    "qs": "^6.12.1",
     "ts-loader": "^9.3.1",
     "typescript": "^4.7.4",
+    "utf-8-validate": "^6.0.4",
+    "uuid": "^9.0.1",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.10.0"
-  },
-  "dependencies": {
-    "@any-reader/core": "workspace:*",
-    "@any-reader/shared": "workspace:*",
-    "easy-post-message": "^0.1.0",
-    "explorer-opener": "^1.0.1",
-    "fs-extra": "^11.1.1",
-    "qs": "^6.12.1",
-    "uuid": "^9.0.1"
   }
 }
