--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -18,6 +18,7 @@
     "electron:build-app": "electron-builder",
     "electron:build": "npm-run-all electron:build-tpl electron:build-app",
     "vscode:dev": "cross-env VITE_APP_PLATFORM=vscode vite",
+    "vscode:build": "cross-env VITE_APP_PLATFORM=vscode run-p type-check \"build-only {@}\" --",
     "cli:build": "cross-env VITE_APP_PLATFORM=browser outDir=../cli/public VITE_APP_BASE_URL=/ vite build",
     "postinstall": "electron-builder install-app-deps"
   },
