--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -2,56 +2,45 @@
   "name": "@any-reader/core",
   "version": "1.0.1",
   "description": "",
-  "type": "module",
-  "main": "index.js",
   "scripts": {
-    "build": "rollup -c",
-    "dev": "rollup -c --watch",
-    "lint": "eslint .",
-    "prepublishOnly": "npm run build",
     "start": "esno src/start.ts",
-    "typecheck": "tsc --noEmit"
+    "build": "unbuild",
+    "stub": "unbuild --stub"
   },
   "keywords": [],
+  "type": "module",
   "exports": {
     ".": {
-      "types": "./index.d.ts",
-      "require": "./dist/index.cjs",
-      "import": "./dist/index.mjs"
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.cjs"
     }
   },
-  "files": ["dist", "index.d.ts"],
-  "dependencies": {
-    "axios": "^1.5.1",
-    "base64-js": "^1.5.1",
-    "cheerio": "1.0.0-rc.12",
-    "compressing": "^1.9.0",
-    "jsonpath-plus": "^7.2.0",
-    "pako": "^2.1.0",
-    "puppeteer": "^21.7.0",
-    "urlencode": "^2.0.0",
-    "xmldom": "^0.6.0",
-    "xpath.js": "^1.1.0"
-  },
+  "main": "./dist/index.cjs",
+  "types": "./dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "devDependencies": {
-    "@antfu/eslint-config": "^0.39.6",
-    "@rollup/plugin-alias": "^5.0.0",
-    "@rollup/plugin-commonjs": "^25.0.2",
-    "@rollup/plugin-json": "^6.0.0",
-    "@rollup/plugin-node-resolve": "^15.1.0",
     "@types/jest": "^29.5.11",
     "@types/node": "^18.16.19",
     "@types/xmldom": "^0.1.34",
+    "axios": "^1.7.2",
+    "base64-js": "^1.5.1",
+    "cheerio": "1.0.0-rc.12",
+    "compressing": "^1.9.0",
     "eslint": "^8.44.0",
     "esno": "^0.16.3",
     "jest": "^29.7.0",
-    "rollup": "^3.26.0",
-    "rollup-plugin-dts": "^5.3.0",
-    "rollup-plugin-esbuild": "^5.0.0",
+    "jsonpath-plus": "^7.2.0",
+    "pako": "^2.1.0",
+    "puppeteer": "^21.7.0",
     "ts-jest": "^29.1.1",
     "typescript": "^5.1.6",
+    "urlencode": "^2.0.0",
     "vite": "^4.3.9",
-    "vitest": "^0.32.2"
+    "vitest": "^0.32.2",
+    "xmldom": "^0.6.0",
+    "xpath.js": "^1.1.0"
   },
   "author": "aooiuu",
   "license": "GPL3"
