--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -2,6 +2,11 @@
   "name": "@any-reader/server",
   "version": "1.0.0",
   "description": "",
+  "scripts": {
+    "build": "unbuild",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "esno watch src/run.ts"
+  },
   "type": "module",
   "exports": {
     ".": {
@@ -11,12 +16,9 @@
   },
   "main": "./dist/index.cjs",
   "types": "./dist/index.d.ts",
-  "files": ["dist"],
-  "scripts": {
-    "build": "unbuild",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "esno watch src/run.ts"
-  },
+  "files": [
+    "dist"
+  ],
   "keywords": [],
   "author": "",
   "license": "GPL3",
