--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -20,27 +20,29 @@
   "files": [
     "dist"
   ],
+  "dependencies": {
+    "axios": "^1.5.1",
+    "base64-js": "^1.5.1",
+    "cheerio": "1.0.0-rc.12",
+    "compressing": "^1.9.0",
+    "jsonpath-plus": "^7.2.0",
+    "pako": "^2.1.0",
+    "puppeteer": "^21.7.0",
+    "urlencode": "^2.0.0",
+    "xmldom": "^0.6.0",
+    "xpath.js": "^1.1.0"
+  },
   "devDependencies": {
     "@types/jest": "^29.5.11",
     "@types/node": "^18.16.19",
     "@types/xmldom": "^0.1.34",
-    "axios": "^1.7.2",
-    "base64-js": "^1.5.1",
-    "cheerio": "1.0.0-rc.12",
-    "compressing": "^1.9.0",
     "eslint": "^8.44.0",
     "esno": "^0.16.3",
     "jest": "^29.7.0",
-    "jsonpath-plus": "^7.2.0",
-    "pako": "^2.1.0",
-    "puppeteer": "^21.7.0",
     "ts-jest": "^29.1.1",
     "typescript": "^5.1.6",
-    "urlencode": "^2.0.0",
     "vite": "^4.3.9",
-    "vitest": "^0.32.2",
-    "xmldom": "^0.6.0",
-    "xpath.js": "^1.1.0"
+    "vitest": "^0.32.2"
   },
   "author": "aooiuu",
   "license": "GPL3"
