--- a/packages/epub/package.json
+++ b/packages/epub/package.json
@@ -18,10 +18,11 @@
     "dist",
     "epub.d.ts"
   ],
-  "dependencies": {},
-  "devDependencies": {
+  "dependencies": {
     "adm-zip": "^0.4.11",
-    "xml2js": "^0.4.23",
+    "xml2js": "^0.4.23"
+  },
+  "devDependencies": {
     "@types/mocha": "^5.2.5",
     "@types/node": "^10.11.7",
     "mocha": "^5.2.0",
